logs/sitedeploy.log
Listing '.'...
Listing './bin'...
Compiling './bin/sitecopy2sitedeploy.py'...
***   File "./bin/sitecopy2sitedeploy.py", line 15
    print "==", site, "=="
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/sitedeploy.py'...
***   File "./bin/sitedeploy.py", line 120
    print "connecting to %s:%i..." % (self.cfg.server, port)
                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sitedeploy-1.0.egg-info'...
Compiling './lib/python3.5/site-packages/sitelib.py'...
***   File "./lib/python3.5/site-packages/sitelib.py", line 44
    return st[stat.ST_MODE] & 0777
                                 ^
SyntaxError: invalid token

Listing './share'...
Listing './share/python-wheels'...
